Bugfixes
Fix change address modal not showing address
Fix tracking code steps incorrect colour

--- a/src/Components/Tracking/trackingInput.scss
+++ b/src/Components/Tracking/trackingInput.scss
@@ -37,3 +37,19 @@
 .ant-form-item-label {
   min-height: 50px;
 }
+
+.ant-steps-item {
+
+  .ant-steps-icon {
+    color: black !important;
+
+  }
+}
+
+.ant-steps-item-active {
+
+  .ant-steps-icon {
+    color: #EC4242 !important;
+
+  }
+}
